--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400&display=swap"
       rel="stylesheet"
@@ -18,20 +20,8 @@
     <div class="loader" hidden>
       <img src="Blocks-1s-100px.svg" alt="" />
     </div>
-    <div class="image-container">
-      <img
-        src="https://images.unsplash.com/photo-1681916882860-adfcc0a42d0e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1681916882860-adfcc0a42d0e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1681916882860-adfcc0a42d0e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80"
-        alt=""
-      />
-    </div>
+    <div class="image-container"></div>
+    <script src="config.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
